example/errors/lexer/raw_str_invalid_starter.box
set x: str = r##ha"haiz"##;

print("it won't get here");
